# whois-hs

./: LICENSE  README.md  cabal.sandbox.config  stack.yaml  whois-hs.cabal  whois.cabal
Network/: Whois.hs
Network/Whois/: Internal.hs
data/: README.md  tlds-alpha-by-domain.txt
src/Network/: Whois.hs
test/: WhoisTest.hs
