name:                whois
version:             1.0.0
synopsis:            Whois client library.
homepage:            http://github.com/CodeBlock/whois-hs
license:             BSD3
license-file:        LICENSE

author:              Ricky Elrod
maintainer:          ricky@elrod.me

category:            Network

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:     Network.Whois_flymake, Network.Whois
  build-depends:       base ==4.6.*, split ==0.2.*, network ==2.4.*
  hs-source-dirs:      src
  
