name:                whois
version:             1.3.0
synopsis:            WHOIS client library.
homepage:            http://github.com/relrod/whois-hs
bug-reports:         https://github.com/relrod/whois-hs/issues

license:             BSD3
license-file:        LICENSE

author:              Ricky Elrod
maintainer:          ricky@elrod.me

description:         Provides a simple client to return WHOIS information about
                     IP addresses or hostnames.

category:            Network
build-type:          Simple
cabal-version:       >=2.0
stability:           experimental, may change (open to suggestions!)

library
  exposed-modules:     Network.Whois
  build-depends:       base ^>= 4.7
                     , split ^>= 0.2
                     , network ^>= 2.8
                     , network-uri ^>= 2.6

source-repository head
  type:     git
  location: git://github.com/relrod/whois-hs.git
